--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "dotenv": "^8.2.0",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-rating": "^2.0.5",
